tests/unit-fail-compilation/dup_params2.c.ref
dup_params2.c:1:1: error: Redeclaration of x with no linkage.
  Constraint violation (CV-TDL4). See C11 sec. 6.7:3
Translation failed (config dumped). Run kcc -d dup_params2.c to see commands run.
