tests/unit-fail-compilation/dup_params2.c
int f(int x, int x);

int f(int x, int y) {
      return x;
}

int main(void) {
      return f(0, 0);
}
